--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -54,7 +54,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #000000 !important;
   text-align: left;
   background-color: #fff;
 }
